--- a/TeduShop.Web/packages.config
+++ b/TeduShop.Web/packages.config
@@ -51,6 +51,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="mustache.js" version="0.7.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="numeral" version="2.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
