--- a/TeduShop.Web/TeduShop.Web.csproj
+++ b/TeduShop.Web/TeduShop.Web.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
     <Compile Include="Models\ApplicationRoleViewModel.cs" />
     <Compile Include="Models\ApplicationUserViewModel.cs" />
+    <Compile Include="Models\DistrictViewModel.cs" />
     <Compile Include="Models\FooterCommon.cs" />
     <Compile Include="Models\FooterViewModel.cs" />
     <Compile Include="Models\FunctionViewModel.cs" />
@@ -367,6 +368,7 @@
     <Content Include="Assets\client\js\shoppingCart.js" />
     <Content Include="Assets\client\js\Sort.js" />
     <Content Include="Assets\client\js\waypoints.min.js" />
+    <Content Include="Assets\client\xml\Provinces_HCM.xml" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -447,6 +449,7 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\ShoppingCart\Index.cshtml" />
     <Content Include="Views\Checkout\Index.cshtml" />
+    <Content Include="Views\Checkout\OverViewResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
