--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\201805010857521_changepament.Designer.cs">
       <DependentUpon>201805010857521_changepament.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805021549482_addsystemconfig.cs" />
+    <Compile Include="Migrations\201805021549482_addsystemconfig.Designer.cs">
+      <DependentUpon>201805021549482_addsystemconfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reponsitories\ErrorRepository.cs" />
@@ -102,6 +106,7 @@
     <Compile Include="Reponsitories\SizeRepository.cs" />
     <Compile Include="Reponsitories\SlideRepository.cs" />
     <Compile Include="Reponsitories\SupportOnlineRepository.cs" />
+    <Compile Include="Reponsitories\SystemConfigRepository.cs" />
     <Compile Include="Reponsitories\TagRepository.cs" />
     <Compile Include="Reponsitories\UserRoleRepository.cs" />
     <Compile Include="TeduShopDbContext.cs" />
@@ -135,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805010857521_changepament.resx">
       <DependentUpon>201805010857521_changepament.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805021549482_addsystemconfig.resx">
+      <DependentUpon>201805021549482_addsystemconfig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
