--- a/TeduShop.Model/TeduShop.Model.csproj
+++ b/TeduShop.Model/TeduShop.Model.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Models\Size.cs" />
     <Compile Include="Models\Slide.cs" />
     <Compile Include="Models\SupportOnline.cs" />
+    <Compile Include="Models\SystemConfig.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
