--- a/TeduShop.Service/TeduShop.Service.csproj
+++ b/TeduShop.Service/TeduShop.Service.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SlideService.cs" />
     <Compile Include="SupportOnlineService.cs" />
+    <Compile Include="SystemConfigService.cs" />
     <Compile Include="TagService.cs" />
     <Compile Include="UserRoleService.cs" />
   </ItemGroup>
