--- a/TeduShop.Web/TeduShop.Web.csproj
+++ b/TeduShop.Web/TeduShop.Web.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Api\ProductQuantityController.cs" />
     <Compile Include="Api\SlideController.cs" />
     <Compile Include="Api\SupportOnlineController.cs" />
+    <Compile Include="Api\SystemConfigController.cs" />
     <Compile Include="Api\TagController.cs" />
     <Compile Include="Api\UploadController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -292,6 +293,7 @@
     <Compile Include="Models\SizeViewModel.cs" />
     <Compile Include="Models\SlideViewModel.cs" />
     <Compile Include="Models\SupportOnlineViewModel.cs" />
+    <Compile Include="Models\SystemConfigViewModel.cs" />
     <Compile Include="Models\TagViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\AuthorizationServerProvider.cs" />
