--- a/DamvayShop.Data/App.config
+++ b/DamvayShop.Data/App.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <clear/>
-    <add name="DamvayShopConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=PHONGNGUYEN\VANPHONG;Initial Catalog=DamvayShop;Integrated Security=False;User Id=sa;Password=ng215233476;MultipleActiveResultSets=True"/>
+  <connectionStrings configSource="ConnectionStrings.config">
   </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
