--- a/DamvayShop.UnitTest/App.config
+++ b/DamvayShop.UnitTest/App.config
@@ -4,9 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <clear />
-    <add name="DamvayShopConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=PHONGNGUYEN\VANPHONG;Initial Catalog=DamvayShop;Integrated Security=False;User Id=sa;Password=ng215233476;MultipleActiveResultSets=True" />
+  <connectionStrings configSource="ConnectionStrings.config">
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
