--- a/DamvayShop.Web/DamvayShop.Web.csproj
+++ b/DamvayShop.Web/DamvayShop.Web.csproj
@@ -428,6 +428,7 @@
     <None Include="Properties\PublishProfiles\CustomProfile6.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile7.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile8.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile9.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
     <Content Include="Scripts\jquery-1.12.4.min.js" />
