--- a/DamvayShop.Web/DamvayShop.Web.csproj
+++ b/DamvayShop.Web/DamvayShop.Web.csproj
@@ -421,6 +421,7 @@
     <Content Include="ConnectionStrings.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile10.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile2.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile3.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile4.pubxml" />
