--- a/DamvayShop.Web/DamvayShop.Web.csproj
+++ b/DamvayShop.Web/DamvayShop.Web.csproj
@@ -424,6 +424,7 @@
     <None Include="Properties\PublishProfiles\CustomProfile10.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile11.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile12.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile13.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile2.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile3.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile4.pubxml" />
