--- a/DamvayShop.Web/DamvayShop.Web.csproj
+++ b/DamvayShop.Web/DamvayShop.Web.csproj
@@ -425,6 +425,7 @@
     <None Include="Properties\PublishProfiles\CustomProfile11.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile12.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile13.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile14.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile2.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile3.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile4.pubxml" />
