--- a/DamvayShop.Web/DamvayShop.Web.csproj
+++ b/DamvayShop.Web/DamvayShop.Web.csproj
@@ -426,6 +426,7 @@
     <None Include="Properties\PublishProfiles\CustomProfile12.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile13.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile14.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile15.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile2.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile3.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile4.pubxml" />
